@@ -2,7 +2,7 @@
 # Makefile gnucobol/bin
 #
 # Copyright (C) 2004-2012 Roger While
-# Copyright (C) 2012 Simon Sobisch
+# Copyright (C) 2012, 2014 Simon Sobisch
 #
 # This file is part of GNU Cobol.
 #
@@ -22,7 +22,13 @@
 bin_SCRIPTS = cob-config
 bin_PROGRAMS = cobcrun
 cobcrun_SOURCES = cobcrun.c
+dist_man_MANS = cobcrun.1
 
 AM_LDFLAGS = $(COB_EXPORT_DYN)
 cobcrun_CFLAGS = $(AM_CFLAGS) -I$(top_srcdir)
 cobcrun_LDADD = $(top_builddir)/lib/libsupport.a $(top_builddir)/libcob/libcob.la
+
+cobcrun.1: cobcrun.c $(top_srcdir)/configure.ac
+	$(MAKE) $(AM_MAKEFLAGS) cobcrun$(EXEEXT)
+	help2man --output=cobcrun.1  --info-page=gnucobol ./cobcrun$(EXEEXT)
+
