@@ -1,0 +1,59 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.43.3.
+.TH COBCRUN "1" "August 2014" "cobcrun 2.0.0" "User Commands"
+.SH NAME
+cobcrun \- manual page for cobcrun 2.0.0
+.SH SYNOPSIS
+.B cobcrun
+\fIPROGRAM \fR[\fIparam \fR...]
+.br
+.B cobcrun
+\fIoptions\fR
+.SH DESCRIPTION
+COBOL driver program for GNU Cobol modules
+.SH OPTIONS
+.TP
+\fB\-h\fR, \fB\-help\fR
+Display this help and exit
+.TP
+\fB\-V\fR, \fB\-version\fR
+Display runtime version
+.TP
+\fB\-i\fR, \fB\-info\fR
+Display runtime information (build/environment)
+.TP
+\fB\-r\fR, \fB\-runtime\-env\fR
+Display runtime information (build/environment)
+.SH COPYRIGHT
+Copyright \(co 2004\-2012 Roger While
+.br
+Copyright \(co 2012,2014 Simon Sobisch
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+Built     Aug 25 2014 09:38:13
+Packaged  Jan 20 2014 07:40:53 UTC
+.PP
+libcob (GNU Cobol) 2.0.0
+.br
+Copyright \(co 2001,2002,2003,2004,2005,2006,2007 Keisuke Nishida
+.br
+Copyright \(co 2006\-2012 Roger While
+.br
+Copyright \(co 2009,2010,2012,2014 Simon Sobisch
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+Built     Aug 25 2014 09:16:25
+Packaged  Jan 20 2014 07:40:53 UTC
+.SH "SEE ALSO"
+The full documentation for
+.B cobcrun
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B cobcrun
+programs are properly installed at your site, the command
+.IP
+.B info gnucobol
+.PP
+should give you access to the complete manual.
