@@ -1,0 +1,296 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.43.3.
+.TH COBC "1" "August 2014" "cobc 2.0.0" "User Commands"
+.SH NAME
+cobc \- manual page for cobc 2.0.0
+.SH SYNOPSIS
+.B cobc
+[\fIoptions\fR]... \fIfile\fR...
+.SH DESCRIPTION
+GNU Cobol compiler for most COBOL dialects with lots of extensions
+.SH OPTIONS
+.TP
+\fB\-h\fR, \fB\-help\fR
+Display this help and exit
+.TP
+\fB\-V\fR, \fB\-version\fR
+Display compiler version
+.TP
+\fB\-i\fR, \fB\-info\fR
+Display compiler information (build/environment)
+.TP
+\fB\-v\fR
+Display the commands invoked by the compiler
+.TP
+\fB\-x\fR
+Build an executable program
+.TP
+\fB\-m\fR
+Build a dynamically loadable module (default)
+.TP
+\fB\-std=\fR<dialect>
+Warnings/features for a specific dialect:
+cobol2002   Cobol 2002
+cobol85     Cobol 85
+ibm         IBM Compatible
+mvs         MVS Compatible
+bs2000      BS2000 Compatible
+mf          Micro Focus Compatible
+default     When not specified
+.IP
+See config/default.conf and config/*.conf
+.TP
+\fB\-free\fR
+Use free source format
+.TP
+\fB\-fixed\fR
+Use fixed source format (default)
+.TP
+\fB\-O\fR, \fB\-O2\fR, \fB\-Os\fR
+Enable optimization
+.TP
+\fB\-g\fR
+Enable C compiler debug / stack check / trace
+.TP
+\fB\-debug\fR
+Enable all run\-time error checking
+.TP
+\fB\-o\fR <file>
+Place the output into <file>
+.TP
+\fB\-b\fR
+Combine all input files into a single
+dynamically loadable module
+.TP
+\fB\-E\fR
+Preprocess only; do not compile or link
+.TP
+\fB\-C\fR
+Translation only; convert COBOL to C
+.TP
+\fB\-S\fR
+Compile only; output assembly file
+.TP
+\fB\-c\fR
+Compile and assemble, but do not link
+.TP
+\fB\-P\fR(=<dir or file>)
+Generate preprocessed program listing (.lst)
+.TP
+\fB\-Xref\fR
+Generate cross reference through 'cobxref'
+(V. Coen's 'cobxref' must be in path)
+.TP
+\fB\-I\fR <directory>
+Add <directory> to copy/include search path
+.TP
+\fB\-L\fR <directory>
+Add <directory> to library search path
+.TP
+\fB\-l\fR <lib>
+Link the library <lib>
+.TP
+\fB\-A\fR <options>
+Add <options> to the C compile phase
+.TP
+\fB\-Q\fR <options>
+Add <options> to the C link phase
+.TP
+\fB\-D\fR <define>
+DEFINE <define> to the COBOL compiler
+.TP
+\fB\-K\fR <entry>
+Generate CALL to <entry> as static
+.TP
+\fB\-conf=\fR<file>
+User defined dialect configuration \- See \fB\-std=\fR
+.TP
+\fB\-cb_conf\fR=\fItag\fR:value
+Override configuration entry
+.TP
+\fB\-list\-reserved\fR
+Display reserved words
+.TP
+\fB\-list\-intrinsics\fR
+Display intrinsic functions
+.TP
+\fB\-list\-mnemonics\fR
+Display mnemonic names
+.TP
+\fB\-list\-system\fR
+Display system routines
+.TP
+\fB\-save\-temps\fR(=<dir>)
+Save intermediate files
+\- Default : current directory
+.TP
+\fB\-ext\fR <extension>
+Add default file extension
+.TP
+\fB\-W\fR
+Enable ALL warnings
+.TP
+\fB\-Wall\fR
+Enable all warnings except as noted below
+.TP
+\fB\-Wobsolete\fR
+Warn if obsolete features are used
+.TP
+\fB\-Warchaic\fR
+Warn if archaic features are used
+.TP
+\fB\-Wredefinition\fR
+Warn incompatible redefinition of data items
+.TP
+\fB\-Wconstant\fR
+Warn inconsistent constant
+.TP
+\fB\-Woverlap\fR
+Warn overlapping MOVE items
+.TP
+\fB\-Wparentheses\fR
+Warn lack of parentheses around AND within OR
+.TP
+\fB\-Wstrict\-typing\fR
+Warn type mismatch strictly
+.TP
+\fB\-Wimplicit\-define\fR
+Warn implicitly defined data items
+.TP
+\fB\-Wcorresponding\fR
+Warn CORRESPONDING with no matching items
+.TP
+\fB\-Wexternal\-value\fR
+Warn EXTERNAL item with VALUE clause
+.TP
+\fB\-Wcall\-params\fR
+Warn non 01/77 items for CALL params
+\- NOT set with \fB\-Wall\fR
+.TP
+\fB\-Wcolumn\-overflow\fR
+Warn text after column 72, FIXED format
+\- NOT set with \fB\-Wall\fR
+.TP
+\fB\-Wterminator\fR
+Warn lack of scope terminator END\-XXX
+\- NOT set with \fB\-Wall\fR
+.TP
+\fB\-Wtruncate\fR
+Warn possible field truncation
+\- NOT set with \fB\-Wall\fR
+.TP
+\fB\-Wlinkage\fR
+Warn dangling LINKAGE items
+\- NOT set with \fB\-Wall\fR
+.TP
+\fB\-Wunreachable\fR
+Warn unreachable statements
+\- NOT set with \fB\-Wall\fR
+.TP
+\fB\-fsign=\fR<value>
+Define display sign representation
+\- ASCII or EBCDIC (Default : machine native)
+.TP
+\fB\-ffold\-copy=\fR<value>
+Fold COPY subject to value
+\- UPPER or LOWER (Default : no transformation)
+.TP
+\fB\-ffold\-call=\fR<value>
+Fold PROGRAM\-ID, CALL, CANCEL subject to value
+\- UPPER or LOWER (Default : no transformation)
+.TP
+\fB\-fdefaultbyte=\fR<value> Initialize fields without VALUE to decimal value
+\- 0 to 255 (Default : initialize to picture)
+.TP
+\fB\-fintrinsics=\fR<value>
+Intrinsics to be used without FUNCTION keyword
+\- ALL or intrinsic function name (,name,...)
+.TP
+\fB\-ftrace\fR
+Generate trace code
+\- Executed SECTION/PARAGRAPH
+.TP
+\fB\-ftraceall\fR
+Generate trace code
+\- Executed SECTION/PARAGRAPH/STATEMENTS
+\- Turned on by \fB\-debug\fR
+.TP
+\fB\-fsyntax\-only\fR
+Syntax error checking only; don't emit any output
+.TP
+\fB\-fdebugging\-line\fR
+Enable debugging lines
+\- 'D' in indicator column or floating >>D
+.TP
+\fB\-fsource\-location\fR
+Generate source location code
+\- Turned on by \fB\-debug\fR/\-g/\-ftraceall
+.TP
+\fB\-fimplicit\-init\fR
+Automatic initialization of the Cobol runtime system
+.TP
+\fB\-fstack\-check\fR
+PERFORM stack checking
+\- Turned on by \fB\-debug\fR or \fB\-g\fR
+.TP
+\fB\-fsyntax\-extension\fR
+Allow syntax extensions
+\- eg. Switch name SW1, etc.
+.TP
+\fB\-fwrite\-after\fR
+Use AFTER 1 for WRITE of LINE SEQUENTIAL
+\- Default : BEFORE 1
+.TP
+\fB\-fmfcomment\fR
+\&'*' or '/' in column 1 treated as comment
+\- FIXED format only
+.TP
+\fB\-facucomment\fR
+\&'$' in indicator area treated as '*',
+\&'|' treated as floating comment
+.TP
+\fB\-fnotrunc\fR
+Allow numeric field overflow
+\- Non\-ANSI behaviour
+.TP
+\fB\-fodoslide\fR
+Adjust items following OCCURS DEPENDING
+\- Requires implicit/explicit relaxed syntax
+.TP
+\fB\-fsingle\-quote\fR
+Use a single quote (apostrophe) for QUOTE
+\- Default : double quote
+.TP
+\fB\-frecursive\-check\fR
+Check recursive program call
+.TP
+\fB\-frelax\-syntax\fR
+Relax syntax checking
+\- eg. REDEFINES position
+.TP
+\fB\-foptional\-file\fR
+Treat all files as OPTIONAL
+\- unless NOT OPTIONAL specified
+.SH COPYRIGHT
+Copyright \(co 2001,2002,2003,2004,2005,2006,2007 Keisuke Nishida
+.br
+Copyright \(co 2006\-2012 Roger While
+.br
+Copyright \(co 2009,2010,2012,2014 Simon Sobisch
+.br
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+Built     Aug 25 2014 11:03:52
+Packaged  Jan 20 2014 07:40:53 UTC
+C version "4.1.2 20070115 (SUSE Linux)"
+.SH "SEE ALSO"
+The full documentation for
+.B cobc
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B cobc
+programs are properly installed at your site, the command
+.IP
+.B info gnucobol
+.PP
+should give you access to the complete manual.
