@@ -35,6 +35,11 @@
 
 	* parser.y: never warn ENTRY as unreachable
 
+2014-08-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 
+
+	* cobc.c : Changed output of --help for help2man
+	* Makefile.am : Added manpage generation + install
+
 2014-07-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* cobc.c, config.c: new option -cb_conf for overriding configuration
