@@ -1,3 +1,9 @@
+
+2014-08-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 
+
+	* cobcrun.c : Changed output of --help for help2man
+	* Makefile.am : Added manpage generation + install
+
 2014-05-06  Philipp Böhme <phi.boehme@googlemail.com>
 
 	* cobcrun.c : Added --runtime-env for displaying current runtime variables.;
